--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 DATABASE_PASSWORD=yR7fpsh2p5Xuvsn9
-DATABASE=mongodb+srv://natewalchenbach:<PASSWORD>@social-network-api.w5iuj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE=mongodb+srv://natewalchenbach:<PASSWORD>@social-network-api.w5iuj.mongodb.net/social-network-api?retryWrites=true&w=majority
 PORT=3000
 NODE_ENV=development
